@@ -53,6 +53,14 @@
         />
 
     <browser:page
+        name="uninstall-flowplayer"
+        for="Products.CMFPlone.interfaces.siteroot.IPloneSiteRoot"
+        class=".view.Uninstall"
+        template="uninstall.pt"
+        permission="cmf.ManagePortal"
+        />
+
+    <browser:page
         name="collective.flowplayer.js"
         for="*"
         class=".view.JavaScript"
