@@ -1,0 +1,35 @@
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
+      xmlns:tal="http://xml.zope.org/namespaces/tal"
+      xmlns:metal="http://xml.zope.org/namespaces/metal"
+      xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+      lang="en"
+      metal:use-macro="context/main_template/macros/master"
+      i18n:domain="collective.flowplayer">
+
+<body>
+
+<div metal:fill-slot="main">
+    <tal:main-macro metal:define-macro="main">
+      <h1>Uninstall collective.flowplayer</h1>
+      <p>Executing this will hopefully completely eradicate collective.flowplayer
+         from your plone site. It will uninstall:
+         <ul>
+           <li>Javascript and css files</li>
+           <li>Portal properties</li>
+           <li>The persistent utility</li>
+           <li>Views that were set to flowplayer</li>
+           <li>Marker interfaces of flowplayer set on your content</li>
+          </ul>
+      </p>
+      <form method="POST">
+        <span tal:replace="structure context/@@authenticator/authenticator"/>
+        <div class="formControls">
+          <input class="context" type="submit" name="form.button.uninstall" value="Yes, please uninstall flowplayer">
+        </div>
+      </form>
+    </tal:main-macro>
+</div>
+
+</body>
+
+</html>
